--- a/.github/workflows/dendron-action.yml
+++ b/.github/workflows/dendron-action.yml
@@ -16,7 +16,7 @@ jobs:
       run: npm install @dendronhq/dendron-cli@latest
 
     - name: Build pod
-      run: npm run dendron-cli -- buildSiteV2 --wsRoot .  --stage prod
+      run: npx dendron buildSite --wsRoot . --stage prod
 
     - name: Deploy site
       uses: peaceiris/actions-gh-pages@v3
