--- a/.github/workflows/dendron-action.yml
+++ b/.github/workflows/dendron-action.yml
@@ -1,4 +1,4 @@
-name: Dendron
+name: Build Dendron Static Site
 
 on:
   push:
@@ -11,12 +11,35 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
-    - name: Install npm dependencies
-      run: npm install @dendronhq/dendron-cli@latest
+    - name: Restore Node modules cache
+      uses: actions/cache@v2
+      id: node-modules-cache
+      with:
+        path: |
+          node_modules
+          .next/*
+          !.next/.next/cache
+          !.next/.env.*
+        key: ${{ runner.os }}-dendronv2-${{ hashFiles('**/yarn.lock', '**/package-lock.json') }}
 
-    - name: Build pod
-      run: npx dendron buildSite --wsRoot . --stage prod
+    - name: Install dependencies
+      run: yarn
+
+    - name: Restore Next cache
+      uses: actions/cache@v2
+      with:
+        path: .next/.next/cache
+        # Generate a new cache whenever packages or source files change.
+        key: ${{ runner.os }}-nextjs-${{ hashFiles('.next/yarn.lock', '.next/package-lock.json') }}-${{ hashFiles('.next/**.[jt]s', '.next/**.[jt]sx') }}
+
+    - name: Initialize or pull nextjs template
+      run: "(test -d .next) && (echo 'updating dendron next...' && cd .next && git reset --hard && git clean -f && git pull && yarn && cd ..) || (echo 'init dendron next' && yarn dendron publish init)"
+
+    - name: Export notes
+      run: yarn dendron publish export --target github --yes
 
     - name: Deploy site
       uses: peaceiris/actions-gh-pages@v3
@@ -25,4 +48,3 @@ jobs:
         publish_branch: pages
         publish_dir: docs/
         force_orphan: true
-        cname: "dendron.so"
