--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@dendronhq/common-all": "^0.32.3",
     "@dendronhq/common-server": "^0.33.1",
+    "@dendronhq/dendron-cli": "^0.82.0",
     "@types/fs-extra": "^9.0.8",
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
